# kl7

./: README.md  meson.build
data/: NATO_Alphabet.txt  msg_1_cipher_text.txt  msg_1_plain_text.txt  msg_2_cipher_text.txt  msg_2_plain_text.txt
doc/: kl7_stepping.xlsx  meson.build
kl7-cli/: dr_wiring.cpp  dr_wiring.h  kl7.cpp  kl7.h  main.cpp  meson.build
test-kl7/: DR_settings.txt  internal_method.h  meson.build  test-kl7.cpp
